utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/RequiredAttributesConfiguration.ide
package valid

typedef configuration RequiredAttributesConfiguration {
    label "Some Configuration"
}
