utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/RequiredAttributesConfiguration.ide
package invalid

typedef configuration RequiredAttributesConfiguration {

}
